# serializer version: 1
# name: test_all_entities[todo.fake_email_gmail_com_concerts-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'todo',
    'entity_category': None,
    'entity_id': 'todo.fake_email_gmail_com_concerts',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Concerts',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Concerts',
    'platform': 'alexa_devices',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <TodoListEntityFeature: 7>,
    'translation_key': None,
    'unique_id': 'amzn1_account_fake_user_id-custom_list_id',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[todo.fake_email_gmail_com_concerts-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'fake_email@gmail.com Concerts',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <TodoListEntityFeature: 7>,
    }),
    'context': <ANY>,
    'entity_id': 'todo.fake_email_gmail_com_concerts',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1',
  })
# ---
# name: test_all_entities[todo.fake_email_gmail_com_shopping_list-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'todo',
    'entity_category': None,
    'entity_id': 'todo.fake_email_gmail_com_shopping_list',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Shopping list',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Shopping list',
    'platform': 'alexa_devices',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <TodoListEntityFeature: 7>,
    'translation_key': 'shop',
    'unique_id': 'amzn1_account_fake_user_id-shopping_list_id',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[todo.fake_email_gmail_com_shopping_list-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'fake_email@gmail.com Shopping list',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <TodoListEntityFeature: 7>,
    }),
    'context': <ANY>,
    'entity_id': 'todo.fake_email_gmail_com_shopping_list',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1',
  })
# ---
# name: test_all_entities[todo.fake_email_gmail_com_to_do_list-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'todo',
    'entity_category': None,
    'entity_id': 'todo.fake_email_gmail_com_to_do_list',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'To-do list',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'To-do list',
    'platform': 'alexa_devices',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <TodoListEntityFeature: 7>,
    'translation_key': 'todo',
    'unique_id': 'amzn1_account_fake_user_id-todo_list_id',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[todo.fake_email_gmail_com_to_do_list-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'fake_email@gmail.com To-do list',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <TodoListEntityFeature: 7>,
    }),
    'context': <ANY>,
    'entity_id': 'todo.fake_email_gmail_com_to_do_list',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1',
  })
# ---
